tests/rosetta/transpiler/Zig/call-a-function-12.error
run: exit status 1
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:8:10: error: unused function parameter
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:16:15: error: unused function parameter
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:24:54: error: pointless discard of local constant
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:25:37: note: used here
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:22:45: error: pointless discard of local constant
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:23:88: note: used here
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:21:45: error: pointless discard of local constant
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:23:67: note: used here
